deployment/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 3

  selector:
    matchLabels:
      app: app

  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: defimov/app:v2
          ports:
            - containerPort: 8000
              name: web
          livenessProbe:
            httpGet:
              port: 8000
              path: /health
            periodSeconds: 5
