deployment/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-service
spec:
  selector:
    app: health-app
  ports:
    - port: 80
      targetPort: web
  type: NodePort
